# wshowkeys

./: Cargo.toml  README.md  config.c  config.h  main.c  meson.build
src/: config.rs  devmgr.rs  input.rs  main.rs  render.rs  wayland.rs
