[package]
name = "wshowkeys"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0"
description = "Display keypresses on wlroots compositors"

[dependencies]
anyhow = "1"
cairo-rs = { version = "0.20", features = ["png"] }
input = "0.9"
libc = "0.2"
nix = { version = "0.29", features = ["socket", "uio", "process", "mman", "fs", "signal", "user", "poll"] }
memmap2 = "0.9"
pango = "0.20"
pangocairo = "0.20"
udev = "0.9"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
xkbcommon = "0.8"
